--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,12 +1,24 @@
-.center {
+.main {
+    padding: 15px;
+}
+.container {
+    display: flex;
+    justify-content: center;
     text-align: center;
-    padding: 10px;
-    top: 6%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    position: absolute;
 }
 
+.containerP {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    color: darkorange   ;
+}
+.imageGit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+}
 .image {
     display: flex;
     justify-content: center;
