--- a/app/page.module.css
+++ b/app/page.module.css
@@ -26,3 +26,29 @@
     border-radius: 50%;
 }
 
+.interests {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    width: 100%;
+    height: 100%;
+    color: darkorange;
+}
+
+.readme {
+    color: rgb(139, 114, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    width: 100%;
+    height: 100%;
+    border: 5px dotted rgb(2, 33, 23);
+    border-radius: 15px;
+    padding: 14x;
+}
