changed color lol

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
 	--color-red: #d50032;
 
 	--color-background: #0a000a;
-	--color-body: #0c5c9a;
+	--color-body: #2272FF;
 	--color-primary: #921F05;
 	--color-primary-darker: #611707;
 	--color-primary-lighter: #ab2406;
