--- a/app/page.module.css
+++ b/app/page.module.css
@@ -11,7 +11,7 @@
     text-align: center;
     display: flex;
     justify-content: center;
-    color: darkorange   ;
+    color: rgb(75, 139, 1);   ;
 }
 .imageGit {
     display: flex;
@@ -35,7 +35,7 @@
     margin-bottom: 5%;
     width: 100%;
     height: 100%;
-    color: darkorange;
+    color: #2272FF;
 }
 
 .readme {
