--- a/app/page.module.css
+++ b/app/page.module.css
@@ -11,6 +11,16 @@
     text-align: center;
     width: 60%;
 }
+
+
+.about {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    color: rgb(126, 125, 125);
+}
+
 .container .pfp {
     display: flex;
     justify-content: center;
