--- a/app/page.module.css
+++ b/app/page.module.css
@@ -25,9 +25,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
     border-radius: 50%;
-    align-self: flex-end;
+    align-self: flex-start;
   }
 
 
@@ -68,8 +67,8 @@
     justify-content: center;
     align-items: center;
     align-self: center;
-    margin-top: 3%;
-    margin-bottom: 5%;
+    margin-top: 1%;
+    margin-bottom: 2%;
     width: 100%;
     height: 100%;
     border: 5px dotted rgb(2, 33, 23);
