add resume :skull:

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -61,6 +61,12 @@
     color: #2272FF;
 }
 
+.here {
+    color: seagreen;
+    font-weight: bolder;
+    font-style: italic;
+}
+
 .readme {
     color: rgb(139, 114, 1);
     display: flex;
