--- a/app/page.module.css
+++ b/app/page.module.css
@@ -81,7 +81,7 @@
     margin-bottom: 2%;
     width: 100%;
     height: 100%;
-    border: 5px dotted rgb(2, 33, 23);
+    border: 5px rgb(2, 33, 23);
     border-radius: 15px;
     padding: 14x;
 }
